@@ -400,7 +400,8 @@ def inner_edition_uri(instance, cells, callback_url=None):
         cells=[cells] if isinstance(cells, EntityCell) else cells,
     )
 
-    if callback_url:
+    # if callback_url:
+    if callback_url and uri:
         uri += f'&callback_url={callback_url}'
 
     return uri
